unpackaged/main/default/objects/Job_Assigned_To__c/Job_Assigned_To__c.object-meta.xml
<CustomObject>
    <label>Job Assigned To</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs Assigned To</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>