unpackaged/main/default/objects/Job_Assigned_To__c/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <label>Capability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partner_Scope_of_Work</valueSetName>
    </valueSet>
</CustomField>